--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <li>Negotiating with officers of the peace.</li>
   </ul>
   <p>and I also know XHTML!</p>
-
+<img src="payaso.jpg" alt="a clown photo"
+<br/>
   <h2>Previous Work Experience</h2>
   <p>I have had a lo long and illustrious career in a variety of trades. Here are some highlights:</p>
   <ul>
